Rename everything from thunder_indicator to length_indicator

--- a/length_indicator.info.yml
+++ b/length_indicator.info.yml
@@ -1,7 +1,6 @@
-name: 'Thunder Length Indicator'
+name: 'Length Indicator'
 description: 'Adds an optional length indicator to fields'
 type: module
 core: 8.x
 dependencies:
   - drupal:field
-package: Thunder
