--- a/length_indicator.services.yml
+++ b/length_indicator.services.yml
@@ -1,3 +1,3 @@
 services:
  length_indicator.get_width_pos:
-   class: Drupal\length_indicator\GetWidhtPos
+   class: Drupal\length_indicator\GetWidthPos
