--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ env:
     # The environment to use, supported are: drupal-7, drupal-8
     - DRUPAL_TI_ENVIRONMENT="drupal-8"
     - DRUPAL_TI_CORE_BRANCH="8.5.x"
+    - DRUPAL_TI_DRUSH_VERSION="drush/drush:8.1.*"
 
     # The installation profile to use:
     #- DRUPAL_TI_INSTALL_PROFILE="testing"
