--- a/.travis.yml
+++ b/.travis.yml
@@ -119,6 +119,7 @@ before_install:
   - cd ..
 
 install:
+  - export DRUPAL_TI_DRUSH_VERSION="drush/drush:8.1.*"
   - drupal-ti install
   - if [ ! -f $HOME/travis-phantomjs/phantomjs-1.9.8-linux-x86_64/bin/phantomjs ]; then rm -rf $HOME/travis-phantomjs; mkdir -p $HOME/travis-phantomjs; wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-linux-x86_64.tar.bz2 -O $HOME/travis-phantomjs/phantomjs-1.9.8-linux-x86_64.tar.bz2; tar -xvf $HOME/travis-phantomjs/phantomjs-1.9.8-linux-x86_64.tar.bz2 -C $HOME/travis-phantomjs; fi
   - export PATH=$HOME/travis-phantomjs/phantomjs-1.9.8-linux-x86_64/bin/:$PATH
