--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,5 @@
   "name": "drupal/length_indicator",
   "description": "Adds an optional length indicator to fields",
   "type": "drupal-module",
-  "license": "GPL-2.0-or-later"gi
+  "license": "GPL-2.0-or-later"
 }
