--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: php
-sudo: required
+dist: xenial
+
+php:
+  - 7.2
+
+services:
+  - mysql
 
 cache:
   apt: true
   directories:
-    - "$HOME/.composer/cache"
-    - "$HOME/.drush/cache"
-    - "$HOME/.npm"
-
-php:
-  - 7.2
-  - 5.6
+  - "$HOME/.composer/cache"
+  - "$HOME/.drush/cache"
+  - "$HOME/.npm"
 
 branches:
   only:
@@ -24,7 +26,7 @@ before_install:
   - composer global require thunder/travis
 
 script:
-  - test-drupal-module
+  - test-drupal-project
 
 notifications:
   email: false
