build: test patch

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,12 @@
   "license": "GPL-2.0-or-later",
   "require": {
     "drupal/core": "^8.7.7 || ^9"
-  }
+  },
+    "extra": {
+        "patches": {
+            "drupal/core": {
+                "PhpUnit 8 tests breaking because of compatibility issue with setUp()": "https://www.drupal.org/files/issues/2020-02-17/3063887-92.patch"
+            }
+        }
+    }
 }
