--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
     - env: DRUPAL_TESTING_DRUPAL_VERSION=~8.8.0
 
 before_install:
-  - composer global require thunder/drupal-testing
+  - composer global require thunder/drupal-testing:dev-feat/enable-patching
 
 script:
   - test-drupal-project
